<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:id="@+id/linear_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="20dp">

            <TextView
                    style="@style/FormEdittext"
                    android:text="@string/first_name"/>

            <EditText
                    android:id="@+id/edt_first_name"
                    android:hint="@string/your_first_name"
                    android:inputType="text"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill"/>

            <TextView
                    style="@style/FormEdittext"
                    android:text="@string/last_name"/>

            <EditText
                    android:id="@+id/edt_last_name"
                    android:hint="@string/your_last_name"
                    android:inputType="text"
                    android:maxLength="20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill"/>

            <TextView
                    style="@style/FormEdittext"
                    android:text="@string/email"/>

            <EditText
                    android:id="@+id/edt_email"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill"/>

            <TextView
                    style="@style/FormEdittext"
                    android:text="@string/gender"/>

            <Spinner
                    android:id="@+id/spinner"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    style="@style/FormEdittext"
                    android:text="@string/create_password"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" tools:ignore="Autofill"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    style="@style/FormEdittext"
                    android:text="@string/confirm_password"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                <EditText
                        android:id="@+id/edt_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" tools:ignore="Autofill"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/txt_agreement"
                        android:textSize="13sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

            </LinearLayout>

            <Button
                    android:id="@+id/btn_register"
                    android:enabled="false"
                    android:text="@string/register"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:background="@drawable/selector_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>

    <RelativeLayout
            android:id="@+id/relative_loading"
            android:alpha="0.5"
            android:visibility="gone"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ProgressBar
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>
</RelativeLayout>